--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,6 +8,10 @@ nav {
   top: 0;
   z-index: 10;
 
+  a {
+    text-decoration: none;
+  }
+
   h3 {
     padding-left: 2rem;
 
