--- a/less/team.less
+++ b/less/team.less
@@ -33,7 +33,6 @@
         max-width: 200px;
         padding-right: 2rem;
         padding-bottom: 2rem;
-        z-index: 9;
 
         .img-circle {
           border-radius: 50%;
